--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.1.0",
+    "nodemailer": "^6.9.9",
     "nodemon": "^3.0.2",
     "supertest": "^6.3.4",
     "swagger-autogen": "^2.23.7",
